# grim-main

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE-NOTICE.md  README.ko.md  README.md  eslint.config.js  grim-project.code-workspace  grim.code-workspace  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  dev.db  rustfmt.toml  schema.sql  tauri.conf.json
apps/desktop/src-tauri/.sqlx/: query-004a1f4da6909e103df01d786414a3c61d834453342a3cf35328c097648905ae.json  query-00804d0b81109916f18fbdda8db4690ac3603007d9bb1e5a7c9bf75e24b581db.json  query-0081d16d9b755c3f1fc79c65011aa68965517dcfb493b33536d1914cd171f1d4.json  query-00b6fc1ece33a53d5a5900fb201353043ce188963a76d26ba3e7120d50279171.json  query-02c33ccafd6d29c5931e39a1a3b5ea5674b243f6826cd068a32c7b586739bad2.json  query-035cef734b50b751432038a688dd9868bc7cca110dfe84c03382a3f041777616.json  query-0488576b18a59e2cb4497ac5ae5b5ec64708d25b79a9e505f8c3097388d28316.json  query-0529796df280b6c0aef0d3800a12385bd6a2b9e5c690ad30ee3308d85844dc17.json  query-053e056b7fac14e5d05cca6f968346c5718e8ba9386d82edbe345177f42dc4e1.json  query-062ddf2781c77088b6642701b412b54b13655cef803e74b13d6be295d584bd0e.json  query-07df4efaf5f6d51f77753b8370d4fad80138164d9d12bf217a948944c37522fb.json  query-0a4da7b77cfb3abb27c657a4f815e36bc3e296dddb02a4b17bfd491cf4e4ba15.json  query-0a63f726fac95eadadb4c46a4b5e0e5bf4436c4b649deb6e8ecbf008f01643c8.json  query-0b7053adb3d2b3768c3795c9f2a19e230ba02480db729c6ed2ba52caf42efa75.json  query-0be76e373fac2824c66fb87fe986f93de570fa5e1db2dd9f7a298207b593afda.json  query-0c11d5940421b50ac00e593f1e3df947e4ca2ea63e3f7f411df7f4284f2e18b3.json  query-0d021bf1c8827a85f79d8c283ce7af94f9adf1894608db3c30abb7a295171190.json  query-0df12e60ddc2359006a52a93a26da616a8c4e40c5e806a8c44ccfb780e3a9326.json  query-0e416d57789ad5e1e5fd0f90f6c376f49c321fc4ca9a07d089353e809d6bf7a9.json  query-10306ca2201804408c2f9cb8972c624a4680bc15e46f7bbbf7a0f5870fdc92e8.json  query-119a5e4b75992a7d0e65970e86f6fb8a18cdac2e857683d6efe0540cb2b8a7ad.json  query-12963910e94f6877f20b7af371146cd23303c58ce2132d71a5d3f578d4756008.json  query-12b52d9ac40ac9b2ae96d8755521ede9dd2f9d4228c2f75b2ed8f6a37aa235e2.json  query-1435c1b4c975e5f4eb13dd83d6da6ea05db6afa5b0260d7807a79e9ddfea332a.json  query-1918c529daacacb5d2ee929a5b84e7e0709f28e60f6292fe2fc3fd2a919a0e4b.json  query-1acff308cb6df85eb8e0ce813a433bdba25d103ae758f151ac95f5b0109da92d.json  query-1b409028fd73f62b939bddeddb9ddab5d2684e212d905d179df0bbb249a10f98.json  query-1c56685e2f0142c00fcb5bee3d2b94be7afef0462dae2d42c73b39ad90d27602.json  query-1cde336656fa9cf2c8ddb26250dedd069fdb926ca1ce4724dcdb40a2e1629361.json  query-1d8b8cbc46159581dce38a98f39123de04149a0c596a27ae3442bfccb8d6b9a8.json  query-1e080b35d16935bf4ba332936f0f07938ce74d007777ecbc0c1cbedc6cf1f802.json  query-1edf9edf72ad9d45c5a3f6dfff004e71cee05a60b7563a9987daa9569aebbb66.json  query-1f05251c1af01b3b8f3d5916fa01fd815660d056df851b119fe3381cc410ba22.json  query-1f68a64bcad11976a54726a4c0589453115693eb28cb4466912c56c49e81becd.json  query-22120489e69ecd1d3e288cd2ed4daf025ca8990786badbc584bb8b9d0fbd9498.json  query-22c71c846af2753413a4c53dc450cc5d51ab160c14741ad78c134bdee53a873c.json  query-23573e5c663cb6fc2ffdafdbcab47d9afe6e638c0b388a309665c3240afe0c75.json  query-23d13a8a73c7a9ef7327e4e8ddc00ee0f0df920ea671f3f06003ddd39f236996.json  query-23f7104f4452ae8e0c173dc3d5b9c5f6a1eb9b099a404bd2c714286d1c9ba791.json  query-241f42f9ef4957299d437cab271040cf0502081133ccbf2986022ebf499c36b3.json  (+258 more)
apps/desktop/src-tauri/capabilities/: capture.json  croquis.json  default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0002_init.sql  001_init.sql  001_library.sql  002_add_image_crop.sql  002_folder_options.sql  002_session_preset_tags.sql  002_time_step_presets.sql  003_app_settings.sql
apps/desktop/src-tauri/src/: bootstrap.rs  errors.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/app_launcher/: capture.rs  croquis.rs  grim.rs  moa.rs  mod.rs
apps/desktop/src-tauri/src/commands/: app.rs  asset.rs  capture.rs  clipboard.rs  croquis.rs  db.rs  document.rs  file.rs  folder.rs  graph.rs  image_crop.rs  import.rs  library.rs  memo.rs  moa.rs  mod.rs  record.rs  session.rs  settings.rs  tag.rs
apps/desktop/src-tauri/src/config/: file.rs  moa.rs  mod.rs  settings.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/models/: app.rs  asset.rs  capture.rs  connection.rs  crop.rs  croquis.rs  document.rs  file.rs  folder.rs  graph.rs  graph_settings.rs  library.rs  memo.rs  mod.rs  node.rs  panel_settings.rs  record.rs  session.rs  settings.rs  tag.rs
apps/desktop/src-tauri/src/repositories/: asset_repository.rs  folder_repository.rs  mappers.rs  mod.rs  record_repository.rs  session_repository.rs  settings_repository.rs  tag_repository.rs
apps/desktop/src-tauri/src/services/: app_service.rs  asset_service.rs  bootstrap_service.rs  db.rs  mod.rs  (+19 more)
(+472 files in other folders)
