[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-utils = "2.6.0"
fs = "0.0.5"
dialog = "0.3.0"
tauri-plugin-dialog = "2"
anyhow = "1.0.98"
chrono = "0.4.41"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite"] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = "1.47.1"
once_cell = "1.21.3"
tauri-plugin-os = "2"
tauri-plugin-decorum = "1.1.1"
dunce = "1.0.5"
mountpoints = "0.2.1"
dirs-next = "2.0.0"
sha256 = "1.6.0"
sha2 = "0.10.9"
infer = "0.19.0"
image = "0.25.6"
async-recursion = "1.1.1"
twox-hash = "2.1.1"
num_cpus = "1.17.0"
fast_image_resize = "5.3.0"
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
screenshots = "0.8.10"
base64 = "0.22.1"
reqwest = { version = "0.12.9", default-features = false, features = ["stream", "blocking", "json", "gzip", "brotli", "deflate"] }
regex = "1.11.3"
futures = "0.3.31"
bytes = "1.10.1"
tauri-plugin-http = "2.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Storage_FileSystem"] }
winapi = "0.3.9"

[features]
macos-private-api = []
