[package]
name = "grim-app"
version = "0.4.3"
description = "A grim App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
anyhow = "1.0.98"
chrono = "0.4.41"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite"] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt", "sync"] }
once_cell = "1.21.3"
tauri-plugin-os = "2"
tauri-plugin-decorum = "1.1.1"
infer = "0.19.0"
image = "0.25.6"
twox-hash = "2.1.1"
fast_image_resize = "5.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
screenshots = "0.8.10"
base64 = "0.22.1"
reqwest = { version = "0.12.9", default-features = false, features = ["stream", "blocking", "json", "gzip", "brotli", "deflate"] }
regex = "1.11.3"
futures = "0.3.31"
bytes = "1.10.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Storage_FileSystem"] }

[features]
macos-private-api = []
